Basic desktop header styles. No nav. IpadPro solution needed still

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="heading">High quality event networking from your couch.</p>
         <button class="btn__join-event">Join Event</button>
         <div class="header-backdrop-div">
-          <img src="img/3823624 1.png" alt="" class="header-backdrop-div-img">
+          <img src="img/header-backdrop.png" alt="" class="header-backdrop-div-img">
         </div>
       </header>
         
