About section scales up

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="explain">
             <h3 class="explain__heading">Speed-network with event participants.</h3>
-            <p class="explain__paragraph">After content has concluded, enjoy the opportunity to discuss with your fellow partipants one to one. Just like a real event.</p>
+            <p class="explain__paragraph">Afterwards, enjoy the opportunity to discuss with your fellow partipants one to one. Just like a real event.</p>
           </div>
         </div>
       </section>
